# Game_of_life_cuddly-couscous

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.hpp  GameOfLife.cpp  GameOfLife.hpp  LICENSE  Patterns.hpp  README.md  Renderer.cpp  Renderer.hpp  launch.bat  launch.sh  main.cpp
